--- a/resources/index.css
+++ b/resources/index.css
@@ -30,5 +30,22 @@ input {
     display: block;
     padding-top: 20px;
     padding-bottom: 20px;
-    color: black;
+    color: #A4A4A4;
+    background-color: #090808;
+    border-radius: 10px;
+    border: 2px solid #8789E8;
+}
+
+.signUpButton {
+    font-family: 'wakuwaku';
+    text-align: center;
+    margin-top: 20px;
+    background-color: #8789E8;
+    border: 2px solid #D7D7D7;
+    padding: 20px;
+    font-size: 22px;
+    padding-left: 85px;
+    padding-right: 85px;
+    margin-left: 5%;
+    border-radius: 10px;
 }
